# aoc24

./: .envrc  .gitignore  Cargo.toml  flake.nix
day1/: Cargo.toml  notes.md
day1/src/: main.rs
day2/: Cargo.toml  notes.md
day2/src/: main.rs
day3/: notes.md
day3/src/: main.rs
day4/src/: main.rs
day5/: notes.md
day5/src/: main.rs
