[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"

[[bin]]
name="day1"
path="day1/src/main.rs"

[[bin]]
name="day2"
path="day2/src/main.rs"

[[bin]]
name="day3"
path="day3/src/main.rs"

[[bin]]
name="day4"
path="day4/src/main.rs"

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
regex = "1.11.1"
